# CodeCartographer

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  start.sh
crates/cc-core/: Cargo.toml
crates/cc-core/benches/: graph_bench.rs  parse_bench.rs
crates/cc-core/src/: lib.rs
crates/cc-core/src/model/: edge.rs  edge_index.rs  graph.rs  mod.rs  node.rs
crates/cc-core/src/parser/: extract.rs  language.rs  mod.rs  python.rs  rust_lang.rs  typescript.rs
crates/cc-core/src/repo/: clone.rs  mod.rs  scanner.rs
crates/cc-core/src/resolver/: call_resolver.rs  extension_probe.rs  import_resolver.rs  mod.rs  symbol_table.rs  type_resolver.rs
crates/cc-core/tests/: extension_probe_test.rs  integration_test.rs  language_support_test.rs
crates/cc-tauri/: Cargo.toml
crates/cc-tauri/src/: lib.rs
crates/cc-tauri/src/commands/: clone.rs  error.rs  mod.rs  parse.rs  scan.rs
docs/: OVERVIEW.md  README.md  cc-core.md  cc-tauri.md  frontend.md  tauri-app.md
docs/features/: benchmarking.md  canvas-rendering.md  cc-core.md  cc-tauri.md  edge_dedup.md  error-handling.md  frontend.md  parallel_parsing.md  parsing.md  server_side_graph_state.md  sidebar.md  toolbar.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
