[workspace]
resolver = "2"
members = [
    "crates/cc-core",
    "crates/cc-tauri",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
cc-core = { path = "crates/cc-core" }
cc-tauri = { path = "crates/cc-tauri" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
rayon = "1.10"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
