[package]
name = "cc-tauri"
version.workspace = true
edition.workspace = true

[dependencies]
cc-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tauri = { version = "2", features = [] }
tracing = { workspace = true }
rayon = { workspace = true }
